k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-project
  labels:
    app: mlops-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops-project
  template:
    metadata:
      labels:
        app: mlops-project
    spec:
      containers:
      - name: mlops-project
        image: muhammadhaziq123/mlops-project:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
