k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-project-service
  labels:
    app: mlops-project
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: mlops-project
